# 2.5DTetris

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: board.cpp  board.h  colors.h  game.cpp  game.h  input.cpp  input.h  io.cpp  io.h  main.cpp  piece_colors.h  pieces.cpp  pieces.h  platform.cpp  platform.h  renderer.cpp  renderer.h  ui.cpp  ui.h  ui3d.cpp  ui3d.h
tests/: logic_smoke.cpp
